[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/game elements/computer.png" type="Texture" id=1]
[ext_resource path="res://scripts/Computer.gd" type="Script" id=2]
[ext_resource path="res://assets/PixeloidSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/art/game elements/FilledCircle.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 10.11
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
angular_velocity = 34.15
angular_velocity_random = 0.64
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
scale_random = 0.5
scale_curve = SubResource( 6 )

[sub_resource type="CircleShape2D" id=4]
radius = 56.5685

[sub_resource type="DynamicFont" id=5]
size = 9
font_data = ExtResource( 3 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )

[node name="SmokeParticles" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 30
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="InteractLabel" type="RichTextLabel" parent="."]
margin_left = -60.306
margin_top = -56.0
margin_right = 59.694
margin_bottom = -24.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Press [enter] to interact[/center]"
text = "Press [enter] to interact"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
